--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.2",
     "sequelize": "^6.33.0"
