Se trabaja en agregar item al carrito

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "npx nodemon src/index.js",
-    "migration:generate": "sequelize migration:generate --name %npm_config_name% --migrations-path ./src/migrations",
+    "migration:generate": "sequelize migration:generate --name $npm_config_name --migrations-path ./src/migrations",
     "migration:run": "sequelize db:migrate --migrations-path ./src/migrations",
     "migration:revert": "sequelize db:migrate:undo"
   },
