--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.11.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.2",
+    "nodemailer": "^6.9.7",
     "sequelize": "^6.33.0"
   },
   "devDependencies": {
